updates to EDA and preprocessing. Bigger changes to data_modeling that includes the age data

--- a/Notebooks/EDA.ipynb
+++ b/Notebooks/EDA.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "# load the data\n",
-    "stroke_data = pd.read_csv(r'C:\\Users\\tscofield\\Documents\\Git\\SpringboardGit\\CapstoneTwo\\stroke_data_cleaned.csv')"
+    "stroke_data = pd.read_csv(r'...\\CapstoneTwo\\stroke_data_cleaned.csv')"
    ]
   },
   {
