--- a/Notebooks/modeling.ipynb
+++ b/Notebooks/modeling.ipynb
@@ -38,9 +38,7 @@
     "import numpy as np\n",
     "\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "#from library.sb_utils import save_file"
+    "warnings.filterwarnings('ignore')\n"
    ]
   },
   {
@@ -69,7 +67,7 @@
    "outputs": [],
    "source": [
     "# load data from file\n",
-    "data = hkl.load(r\"C:\\Users\\tscofield\\Documents\\Git\\Capstone2-StrokePrediction\\Data\\stroke_traintest_unscaled_data.hkl\")"
+    "data = hkl.load(r\"...\\Capstone2-StrokePrediction\\Data\\stroke_traintest_unscaled_data.hkl\")"
    ]
   },
   {
@@ -1270,7 +1268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3808310f",
+   "id": "69b27f07",
    "metadata": {},
    "source": [
     "Another model with zero recall. The high class imbalance is proving to be a problem for the algorithms."
@@ -1349,7 +1347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a88b4de5",
+   "id": "2f03e059",
    "metadata": {},
    "source": [
     "We were able to upsample the training set to remove the stroke class imbalance from the data. The original training data has shape <code> X_train shape: (4086, 16) </code> and the upsampled data has a shape of <code> X_train_res shape: (7798, 16) </code>. The testing set is not affected by this change, we want to keep the integrity of the testing set intact.\n",
@@ -1507,7 +1505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "929a9188",
+   "id": "e56bbd66",
    "metadata": {},
    "source": [
     "We found a slight improvement in classification results after upsampling the data. Here, with the random forest model, we correctly classified 5 strokes and miss-classified 11 strokes. These are not great results, however, an improvement from the previous models."
@@ -1661,7 +1659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d79a265f",
+   "id": "b46cb2bd",
    "metadata": {},
    "source": [
     "Again, we found an improvement over the SVM model using the unscaled data. "
@@ -2130,7 +2128,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "f5ab241d",
+   "id": "085746b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2143,7 +2141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dae5e96",
+   "id": "c940c790",
    "metadata": {},
    "source": [
     "### 4. Discussion and Conclusion"
@@ -2151,7 +2149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daeb24df",
+   "id": "cc1f0f9b",
    "metadata": {},
    "source": [
     "We found improved results training the models with upsampled training data. Unlike the initial models, the upsampled models were able to make some correct stroke predictions. A collection of the models, their AUC, F1-score, and F1.5-score can be shown below. Here, we include the F1.5-score to emphasize a greater weight on the recall rather than the precision. In healthcare contexts such as these, the recall is a more important metric given that we want to minimize predicting 0 (non-stroke) when the patient is actually a stroke victim. "
@@ -2160,7 +2158,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "0c1a028d",
+   "id": "080bb197",
    "metadata": {},
    "outputs": [
     {
@@ -2293,7 +2291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5f8d325",
+   "id": "bd11afda",
    "metadata": {},
    "source": [
     "Again, all of the best models are using the upsampled training data. The testing perfomance can be found in the <code>results_df</code> table. Arguably, the best models, in this order, are SVM_scaled, LogisticRegression_scaled, and RandomForest_scaled. Next, let's look at their feature importances to get some insight on what features in the data are most important at predicting strokes."
@@ -2301,7 +2299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b8e1d45",
+   "id": "47062d19",
    "metadata": {},
    "source": [
     "#### Feature Importances"
@@ -2310,7 +2308,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "ccb459d3",
+   "id": "3cec2e80",
    "metadata": {},
    "outputs": [
     {
@@ -2350,7 +2348,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "0dd711a1",
+   "id": "73ed17a7",
    "metadata": {},
    "outputs": [
     {
@@ -2388,7 +2386,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "816e9c3a",
+   "id": "7ddc66de",
    "metadata": {},
    "outputs": [
     {
@@ -2426,7 +2424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0ec37c4",
+   "id": "7700a846",
    "metadata": {},
    "source": [
     "The feature importance analysis highlighted some interesting information. The top features for multiple models were <code>smoking_status_never smoked</code>, <code>smoking_status_smokes</code>, <code>smoking_status_formerly smoked</code>, <code>smoking_status_Unknown</code>, and interestingly enough, <code>work_type_Private</code>. Moreover, our models are strongly hinting that there are correlations between smoking status and strokes. Also, there may be also a correlation between strokes and working in the private sector.\n",
@@ -2437,7 +2435,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "79f54c7d",
+   "id": "c2ece642",
    "metadata": {},
    "outputs": [
     {
@@ -2525,7 +2523,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "7741b6e6",
+   "id": "2892f163",
    "metadata": {},
    "outputs": [
     {
@@ -2557,7 +2555,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "0a22236d",
+   "id": "d0568c5b",
    "metadata": {},
    "outputs": [
     {
@@ -2581,7 +2579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8829d9ba",
+   "id": "38139d71",
    "metadata": {},
    "source": [
     "These plots show us some further information on the correlations between the top features and stroke status. Interestingly enough, <code>smoking_status_never smoked</code> has a higher proportion of strokes than both <code>smoking_status_smokes</code> and <code>smoking_status_formerly smoked</code>. I expected the smokers to have a higher proportion of strokes but the data tells a different story. Also, the only category of the top features that has a higher proportion of stroke victims in the positive class is <code>work_type_Private</code>. This means that the data suggests that individuals who work in the private sector have a higher chance of having a stroke. This fact could be due to chance and other missing key features of data, or this discovery could have merit. \n",
@@ -2591,7 +2589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb24a7c1",
+   "id": "4998d260",
    "metadata": {},
    "source": [
     "#### Hypothesis Test for Private Work and Stroke Status"
@@ -2599,7 +2597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "027da4fe",
+   "id": "bda17320",
    "metadata": {},
    "source": [
     "To test whether there is any merit in our discovery, we will perform a quick hypothesis test to determine if there is any statistical significance between working in the private sector and stroke status. Because we have a relatively small sample size and two classes, we will be using a two-sample t-test. \n",
@@ -2612,7 +2610,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "353962b0",
+   "id": "3c0d205f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2624,7 +2622,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "c5fe7540",
+   "id": "66181915",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2636,7 +2634,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "326c8800",
+   "id": "f9897f7a",
    "metadata": {},
    "outputs": [
     {
@@ -2655,7 +2653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0006b273",
+   "id": "fa542124",
    "metadata": {},
    "source": [
     "Although there appears to be some correlation between stroke status and working in the private sector, it is not statistically significant enough to reject the null hypothesis because the p-value is greater than 0.05."
@@ -2663,7 +2661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6b68dde",
+   "id": "a450582f",
    "metadata": {},
    "source": [
     "#### Classification Threshold Tuning"
@@ -2671,7 +2669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d96cc5b5",
+   "id": "bcce539c",
    "metadata": {},
    "source": [
     "An additional parameter that needs to be tested is the threshold for classification. Furthermore, each of these model's output is a set of probabilities for the testing class and up to this point, we have been using a 50% (0.5) threshold to convert these probabilities into a binary array. However, with the class imbalance present in the data, this threshold may not be suitable. We are going to test this with the top 3 models and re-evaluate the F1-score, F1.5-score, and confusion matrices."
@@ -2680,7 +2678,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "f6e6b5d3",
+   "id": "7f3de1f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2724,7 +2722,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "4162255e",
+   "id": "6a9e0d43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2780,7 +2778,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "2b84c502",
+   "id": "e7300488",
    "metadata": {},
    "outputs": [
     {
@@ -2812,7 +2810,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "05010d71",
+   "id": "6e6beb65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2829,7 +2827,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "da89cb16",
+   "id": "f3a04468",
    "metadata": {},
    "outputs": [
     {
@@ -2859,7 +2857,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "42312907",
+   "id": "74454ba9",
    "metadata": {},
    "outputs": [
     {
@@ -2891,7 +2889,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "6e24c0d2",
+   "id": "7f222e02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2908,7 +2906,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "a314c260",
+   "id": "ff04c7ef",
    "metadata": {},
    "outputs": [
     {
@@ -2938,7 +2936,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "c76be913",
+   "id": "893f7365",
    "metadata": {},
    "outputs": [
     {
@@ -3031,7 +3029,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a76441aa",
+   "id": "dc602a04",
    "metadata": {},
    "source": [
     "From this threshold analysis for our top models, we have determined that 0.5 is not an optimal threshold to optimize neither the F1-score or the F1.5-score. The table above shows the \"optimal\" collection of results. In fact, this analysis showed that a Random Forest model may be the best option for this data. Nonetheless, threshold tuning is very important to these models for this dataset and needs to be done to improve the performance. "
@@ -3039,7 +3037,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39deab51",
+   "id": "09c11390",
    "metadata": {},
    "source": [
     "#### Conclusion"
@@ -3047,7 +3045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a613ddd8",
+   "id": "d34e0c26",
    "metadata": {},
    "source": [
     "In this work, we have trained and tested five classification models to try to best predict strokes in patients: random forest classifier, support vector machine, logistic regression classifier, XGBoost classifier, and CatBoost classifier. We performed a parameter search on all algorithms to optimize the parameters used in each scenario. The original data contains a class-imbalance in the stroke status where strokes are outweighed 249:4860 or almost 1:20. This class imbalance causes many issues for the algorithms and makes the correct classifications hard to achieve. For the original models, we did not alter the data and trained/tested on the data in its original form. To assess the performance of the models, we recored the area under the curve (AUC), the F1-score, and the F1.5-score. The F1.5-score was recorded because it places a higher emphasis on the recall rather than the precision. The recall is more important in data like this because it is important that we minimize the false-negative predictions. Furthermore, false-negative predictions in this scenario are patients who have a stroke status of 1 but we predict them as 0. This scenario is also referred to as a Type II error and can be detrimental in health-related instances. \n",
