--- a/Notebooks/preprocessing.ipynb
+++ b/Notebooks/preprocessing.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5892905e",
    "metadata": {},
    "outputs": [],
@@ -36,9 +36,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import os\n",
-    "import numpy as np\n",
-    "\n",
-    "from library.sb_utils import save_file"
+    "import numpy as np"
    ]
   },
   {
@@ -51,17 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "1b9c6449",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stroke_data = pd.read_csv(r'..\\healthcare-dataset-stroke-data.csv')"
+    "stroke_data = pd.read_csv(r'...\\Capstone2-StrokePrediction\\Data\\healthcare-dataset-stroke-data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "e060f143",
    "metadata": {},
    "outputs": [
@@ -203,7 +201,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e13a12e6",
    "metadata": {},
    "outputs": [
@@ -548,7 +546,7 @@
        "Name: gender, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "73974ecc",
    "metadata": {},
    "outputs": [
@@ -815,7 +813,7 @@
        "[5099 rows x 9 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "2d6e68b6",
    "metadata": {},
    "outputs": [],
@@ -840,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "ede3b749",
    "metadata": {},
    "outputs": [
@@ -968,7 +966,7 @@
        "[5099 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "9917bccc",
    "metadata": {},
    "outputs": [
@@ -1273,7 +1271,7 @@
        "[5099 rows x 12 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "d68ff4a9",
    "metadata": {},
    "outputs": [
@@ -1334,6 +1332,7 @@
        "      <th>smoking_status_never smoked</th>\n",
        "      <th>smoking_status_smokes</th>\n",
        "      <th>id</th>\n",
+       "      <th>age</th>\n",
        "      <th>hypertension</th>\n",
        "      <th>heart_disease</th>\n",
        "      <th>avg_glucose_level</th>\n",
@@ -1357,6 +1356,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>9046</td>\n",
+       "      <td>67.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>228.69</td>\n",
@@ -1378,6 +1378,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>51676</td>\n",
+       "      <td>61.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>202.21</td>\n",
@@ -1399,6 +1400,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>31112</td>\n",
+       "      <td>80.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>105.92</td>\n",
@@ -1420,6 +1422,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>60182</td>\n",
+       "      <td>49.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>171.23</td>\n",
@@ -1441,6 +1444,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1665</td>\n",
+       "      <td>79.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>174.12</td>\n",
@@ -1473,29 +1477,29 @@
        "3                   0                       0                               0   \n",
        "4                   0                       0                               0   \n",
        "\n",
-       "   smoking_status_never smoked  smoking_status_smokes     id  hypertension  \\\n",
-       "0                            0                      0   9046             0   \n",
-       "1                            1                      0  51676             0   \n",
-       "2                            1                      0  31112             0   \n",
-       "3                            0                      1  60182             0   \n",
-       "4                            1                      0   1665             1   \n",
+       "   smoking_status_never smoked  smoking_status_smokes     id   age  \\\n",
+       "0                            0                      0   9046  67.0   \n",
+       "1                            1                      0  51676  61.0   \n",
+       "2                            1                      0  31112  80.0   \n",
+       "3                            0                      1  60182  49.0   \n",
+       "4                            1                      0   1665  79.0   \n",
        "\n",
-       "   heart_disease  avg_glucose_level   bmi  stroke  \n",
-       "0              1             228.69  36.6       1  \n",
-       "1              0             202.21   NaN       1  \n",
-       "2              1             105.92  32.5       1  \n",
-       "3              0             171.23  34.4       1  \n",
-       "4              0             174.12  24.0       1  "
+       "   hypertension  heart_disease  avg_glucose_level   bmi  stroke  \n",
+       "0             0              1             228.69  36.6       1  \n",
+       "1             0              0             202.21   NaN       1  \n",
+       "2             0              1             105.92  32.5       1  \n",
+       "3             0              0             171.23  34.4       1  \n",
+       "4             1              0             174.12  24.0       1  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# merge categorical and numerical variables back together\n",
-    "stroke_data_num = stroke_data[['id', 'hypertension', 'heart_disease', 'avg_glucose_level', 'bmi', 'stroke']]\n",
+    "stroke_data_num = stroke_data[['id', 'age', 'hypertension', 'heart_disease', 'avg_glucose_level', 'bmi', 'stroke']]\n",
     "stroke_data_encoded = cat_data_encoded.merge(stroke_data_num, left_on=cat_data_encoded.index, right_on=stroke_data_num.index)\n",
     "stroke_data_encoded = stroke_data_encoded.drop(columns=['key_0'], axis=1)\n",
     "stroke_data_encoded.head()"
@@ -1511,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "0f84c133",
    "metadata": {},
    "outputs": [
@@ -1521,7 +1525,7 @@
        "0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1867,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "f6e6a4fc",
    "metadata": {},
    "outputs": [],
@@ -1877,197 +1881,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "a4e7aac3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gender</th>\n",
-       "      <th>ever_married</th>\n",
-       "      <th>Residence_type</th>\n",
-       "      <th>work_type_Govt_job</th>\n",
-       "      <th>work_type_Never_worked</th>\n",
-       "      <th>work_type_Private</th>\n",
-       "      <th>work_type_Self-employed</th>\n",
-       "      <th>work_type_children</th>\n",
-       "      <th>smoking_status_Unknown</th>\n",
-       "      <th>smoking_status_formerly smoked</th>\n",
-       "      <th>smoking_status_never smoked</th>\n",
-       "      <th>smoking_status_smokes</th>\n",
-       "      <th>id</th>\n",
-       "      <th>hypertension</th>\n",
-       "      <th>heart_disease</th>\n",
-       "      <th>avg_glucose_level</th>\n",
-       "      <th>bmi</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9046</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.706151</td>\n",
-       "      <td>1.004738</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>51676</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.121398</td>\n",
-       "      <td>-0.099202</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>31112</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.004957</td>\n",
-       "      <td>0.472250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>60182</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.437272</td>\n",
-       "      <td>0.719013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1665</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.501091</td>\n",
-       "      <td>-0.631690</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   gender  ever_married  Residence_type  work_type_Govt_job  \\\n",
-       "0       1             1               1                   0   \n",
-       "1       0             1               0                   0   \n",
-       "2       1             1               0                   0   \n",
-       "3       0             1               1                   0   \n",
-       "4       0             1               0                   0   \n",
-       "\n",
-       "   work_type_Never_worked  work_type_Private  work_type_Self-employed  \\\n",
-       "0                       0                  1                        0   \n",
-       "1                       0                  0                        1   \n",
-       "2                       0                  1                        0   \n",
-       "3                       0                  1                        0   \n",
-       "4                       0                  0                        1   \n",
-       "\n",
-       "   work_type_children  smoking_status_Unknown  smoking_status_formerly smoked  \\\n",
-       "0                   0                       0                               1   \n",
-       "1                   0                       0                               0   \n",
-       "2                   0                       0                               0   \n",
-       "3                   0                       0                               0   \n",
-       "4                   0                       0                               0   \n",
-       "\n",
-       "   smoking_status_never smoked  smoking_status_smokes     id  hypertension  \\\n",
-       "0                            0                      0   9046             0   \n",
-       "1                            1                      0  51676             0   \n",
-       "2                            1                      0  31112             0   \n",
-       "3                            0                      1  60182             0   \n",
-       "4                            1                      0   1665             1   \n",
-       "\n",
-       "   heart_disease  avg_glucose_level       bmi  \n",
-       "0              1           2.706151  1.004738  \n",
-       "1              0           2.121398 -0.099202  \n",
-       "2              1          -0.004957  0.472250  \n",
-       "3              0           1.437272  0.719013  \n",
-       "4              0           1.501091 -0.631690  "
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# split the target variable\n",
     "X = stroke_data_encoded.drop(['stroke'], axis=1)\n",
@@ -2076,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "427cc1c0",
    "metadata": {},
    "outputs": [],
@@ -2095,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "4bd07fd7",
    "metadata": {},
    "outputs": [
